# oop4

./: README.md
lab4/: CMakeLists.txt
lab4/include/: Array.h  Figure.h  Pentagon.h  Point.h  Rhombus.h  Trapezoid.h
lab4/src/: main.cpp
lab4/tests/: CMakeLists.txt  test_array.cpp  test_figures.cpp  test_integration.cpp  test_point.cpp
